--- a/mtntours.com/sass/layout/_header.scss
+++ b/mtntours.com/sass/layout/_header.scss
@@ -1,6 +1,10 @@
 .header {
     height: 95vh;
-    background-image: linear-gradient( to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url(../img/canyon.jpg);
+    background-image: linear-gradient( 
+        to right bottom, 
+        rgba(0, 0, 0, 0.5), 
+        rgba(0, 0, 0, 0.2)), 
+        url(../img/canyon.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
