added hearder pic

--- a/mtntours.com/sass/layout/_header.scss
+++ b/mtntours.com/sass/layout/_header.scss
@@ -4,7 +4,7 @@
         to right bottom, 
         rgba(0, 0, 0, 0.5), 
         rgba(0, 0, 0, 0.2)), 
-        url(../img/canyon.jpg);
+        url(../img/canyon-1.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
