--- a/mtntours.com/css/style.css
+++ b/mtntours.com/css/style.css
@@ -243,7 +243,7 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url(../img/canyon.jpg);
+  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url(../img/canyon-1.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
