--- a/mtntours.com/sass/components/_button.scss
+++ b/mtntours.com/sass/components/_button.scss
@@ -10,7 +10,6 @@
         position: relative;
         font-size: $default-font-size;
     }
-
     &:hover {
         transform: translateY(-3px);
         box-shadow: 0 1rem 2rem rgba($color-black, .2);
@@ -19,7 +18,6 @@
             opacity: 0;
         }
     }
-
     &:active {
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
@@ -28,8 +26,18 @@
     &--white {
         background-color: $color-white;
         color: $color-gray-dark;
+        
         &::after {
             background-color: $color-white;
+        }
+    }
+
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+        
+        &::after {
+            background-color: $color-primary;
         }
     }
 
@@ -45,12 +53,12 @@
         z-index: -1;
         transition: all .4s;
     }
-
     &--animated {
         animation: moveInBottom .5s ease-out .75s;
         animation-fill-mode: backwards;
     }
 }
+
 .btn-text {
     &:link,
     &:visited {
@@ -62,7 +70,6 @@
         padding: 3px;
         transition: all .2s;
     }
-
     &:hover {
         background-color: $color-primary;
         color: $color-white;
@@ -71,7 +78,6 @@
         border-radius: 8px;
         padding: .5rem;
     }
-
     &:active {
         box-shadow: 0 .5rem 1rem rgba($color-black, .15);
         transform: translateY(0);
