--- a/mtntours.com/sass/layout/_header.scss
+++ b/mtntours.com/sass/layout/_header.scss
@@ -1,13 +1,14 @@
 .header {
     height: 95vh;
     background-image: linear-gradient( 
-        to right bottom, 
-        rgba(0, 0, 0, 0.5), 
-        rgba(0, 0, 0, 0.2)), 
+        to right top, 
+        rgba(0, 0, 0, 0.9), 
+        rgba(0, 0, 0, 0.1)), 
         url(../img/canyon-1.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     
     &__logo-box {
