--- a/mtntours.com/sass/pages/_home.scss
+++ b/mtntours.com/sass/pages/_home.scss
@@ -21,4 +21,11 @@ background-image: linear-gradient(
     }
 }
 
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 25rem 0 15rem 0;
+    margin-top: -10rem;
+
+}
+
 
