--- a/mtntours.com/sass/base/_typography.scss
+++ b/mtntours.com/sass/base/_typography.scss
@@ -11,7 +11,6 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
-    
     &--main {
         display: block;
         font-size: 6rem;
@@ -25,7 +24,6 @@ body {
         animation-iteration-count: 3;
     */
     }
-    
     &--sub {
         display: block;
         font-size: 2rem;
@@ -43,14 +41,16 @@ body {
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
     -webkit-background-clip: text;
     color: transparent;
+    text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     letter-spacing: .2rem;
     transition: all .2s;
-    
-    &:hover {
-        transform: skewY(2deg) skewX(15deg) scale(1.1);
-        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
-    }
+
+    // &:hover {
+    //     transform: skewY(2deg) skewX(15deg) scale(1.1);
+    //     text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    // }
 }
+
 
 .heading-tertiary {
     font-size: $default-font-size;
