--- a/natours.com/sass/components/_card.scss
+++ b/natours.com/sass/components/_card.scss
@@ -26,19 +26,18 @@
             transform: rotateY(180deg);
 
             &-1 {
-                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark); 
+                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
 
             &-2 {
-                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark); 
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
             }
 
             &-3 {
-                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark); 
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
             }
         }
     }
-
     &:hover &__side--front {
         transform: rotateY(-180deg);
     }
@@ -47,7 +46,7 @@
         transform: rotateY(0);
     }
 
-// FRONT SIDE STYLING
+    // FRONT SIDE STYLING
     &__picture {
         background-size: cover;
         height: 22rem;
@@ -57,17 +56,17 @@
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
 
-
         &--1 {
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/nat-5.jpg);
         }
+        
         &--2 {
-            background-image:  linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../img/nat-6.jpg);
-        }
-        &--3 {
-            background-image:  linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(../img/nat-7.jpg);
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../img/nat-6.jpg);
         }
 
+        &--3 {
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(../img/nat-7.jpg);
+        }
     }
 
     &__heading {
@@ -89,49 +88,41 @@
         box-decoration-break: clone;
 
         &--1 {
-            background-image: linear-gradient(to right bottom,
-             rgba($color-secondary-light, .85),
-             rgba($color-secondary-dark, .85)); 
+            background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85));
         }
 
         &--2 {
-            background-image: linear-gradient(to right bottom,
-             rgba($color-primary-light, .85),
-             rgba($color-primary-dark, .85)); 
+            background-image: linear-gradient(to right bottom, rgba($color-primary-light, .85), rgba($color-primary-dark, .85));
         }
 
         &--3 {
-            background-image: linear-gradient(to right bottom,
-             rgba($color-tertiary-light, .85),
-             rgba($color-tertiary-dark, .85)); 
+            background-image: linear-gradient(to right bottom, rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85));
         }
     }
 
     &__details {
         padding: 3rem;
-        ul  {
+        ul {
             list-style: none;
             width: 80%;
             margin: 0 auto;
-
             li {
                 text-align: center;
                 font-size: 1.5rem;
                 padding: 1rem;
-
                 &:not(:last-child) {
                     border-bottom: 1px solid #eee;
                 }
             }
         }
-    }
+    } 
 
     // BACK SIDE STYLING
     &__cta {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform:  translate(-50%, -50%);
+        transform: translate(-50%, -50%);
         width: 90%;
         text-align: center;
     }
@@ -150,5 +141,59 @@
     &__price-value {
         font-size: 6rem;
         font-weight: 100;
+    }
+
+
+
+
+
+
+
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100% );
+            }
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 1rem 3rem;
+        }
+
+        // BACK SIDE STYLING
+        &__cta {
+            position: relative;
+            top: 0%;
+            left: 0%;
+            transform: translate(0);
+            width: 100%;
+            padding: 7rem 4rem 4rem 4rem;
+
+           
+        }
+
+        &__price-box {
+           
+            margin-bottom: 3rem;
+        }
+
+        &__price-value {
+            font-size: 5rem;
+            
+        }
     }
 }
