--- a/natours.com/sass/components/_story.scss
+++ b/natours.com/sass/components/_story.scss
@@ -8,29 +8,41 @@
     padding-left: 9rem;
     font-size: $default-font-size;
     transform: skewX(-12deg);
-
-    &__shape {
-       width: 15rem;
-       height: 15rem;
-       float: left; 
-       -webkit-shape-outside: circle(50% at 50% 50%);  
-       shape-outside: circle(50% at 50% 50%); 
-       -webkit-clip-path: circle(50% at 50% 50%);
-       clip-path: circle(50% at 50% 50%);
-       transform: translateX(-3rem) skewX(12deg);
-       position: relative;
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
     }
-
+    @include respond(phone) {
+        transform: skewX(0);
+    }
+    &__shape {
+        width: 15rem;
+        height: 15rem;
+        float: left;
+        -webkit-shape-outside: circle(50% at 50% 50%);
+        shape-outside: circle(50% at 50% 50%);
+        -webkit-clip-path: circle(50% at 50% 50%);
+        clip-path: circle(50% at 50% 50%);
+        transform: translateX(-3rem) skewX(12deg);
+        position: relative;
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
+    }
     &__img {
         height: 100%;
         transform: translateX(-4rem) scale(1.4);
         transition: all .5s;
     }
-
     &__text {
         transform: skewX(12deg);
-    }
 
+        @include respond(phone) {
+            transform: skewX(0);
+        }
+    }
+    
     &__caption {
         position: absolute;
         top: 50%;
@@ -44,15 +56,12 @@
         transition: all .5s;
         backface-visibility: hidden;
     }
-
     &:hover &__caption {
         opacity: 1;
         transform: translate(-50%, -50%);
     }
-
     &:hover &__img {
         transform: translateX(-4rem) scale(1);
         filter: blur(3px) brightness(80%);
     }
-
 }
