--- a/natours.com/sass/layout/_footer.scss
+++ b/natours.com/sass/layout/_footer.scss
@@ -3,12 +3,19 @@
     padding: 10rem 0;
     font-size: 1.4rem;
     color: $color-grey-light-1;
-   
-    &__logo-box {
-       text-align: center;
-        margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+        padding: 8rem 0;
     }
 
+    &__logo-box {
+        text-align: center;
+        margin-bottom: 8rem;
+
+        @include respond(tab-port) {
+           margin-bottom: 6rem;
+        }
+    }
     &__logo {
         width: 15rem;
         height: auto;
@@ -18,6 +25,11 @@
         border-top: 1px solid $color-grey-light-1;
         padding-top: 2rem;
         display: inline-block;
+        
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -26,12 +38,11 @@
 
     &__item {
         display: inline-block;
-        
         &:not(:last-child) {
             margin-right: 1.5rem;
         }
-    } 
-
+    }
+    
     &__link {
         &:link,
         &:visited {
@@ -42,7 +53,6 @@
             display: inline-block;
             transition: all .2s;
         }
-
         &:hover,
         &:active {
             color: $color-primary;
@@ -50,13 +60,15 @@
             transform: rotate(5deg) scale(1.3);
         }
     }
-
     &__copyright {
         border-top: 1px solid $color-grey-light-1;
         padding-top: 2rem;
         widows: 80%;
         float: right;
 
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
-
 }
