--- a/trillo.com/sass/_components.scss
+++ b/trillo.com/sass/_components.scss
@@ -209,7 +209,8 @@
     .overview{
         display: flex;
         align-items: center;
-        border-bottom: 1px solid var(--color-grey-light-2);
+        border-bottom: var(--line);
+
 
         &__heading {
             font-size: 2.25rem;
@@ -310,5 +311,76 @@
             box-shadow: none;
         }
 
+    }
 
+    //////////////////////////////
+    //PARAGRAPH
+    .paragraph:not(:last-of-type) {
+        margin-bottom: 2rem;
+    }
+
+    //////////////////////////////
+    //LIST
+    .list {
+        list-style: none;
+        margin: 3rem 0;
+        padding: 3rem 0;
+        border-top: var(--line);
+
+        display: flex;
+        flex-wrap: wrap;
+
+        &__item {
+            flex: 0 0 50%;
+            margin-bottom: .7rem;
+        }
+
+        &__item:before {
+            content: '';
+            display: inline-block;
+            width: 1rem;
+            height: 1rem;
+
+            //Oder Browsers
+            // background-image: url(../img/chevron-thin-right.svg);
+            // background-size: cover;
+
+            //Newer browser -mask
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size: cover;
+        }
+    }
+
+    //////////////////////////////
+    //RECOMEND
+    .recommend {
+        font-size: 1.3rem;
+        color: var(--color-grey-dark-3);
+
+        display: flex;
+        align-items: center;
+
+
+        &__count {
+            margin-right: auto;
+        }
+
+        &__friends {
+
+        }
+
+        &__photo {
+            box-sizing: content-box;
+            height: 4rem;
+            width: 4rem;
+            border-radius: 50%;
+            border: 3px solid #fff;
+
+            &:not(:last-child) {
+                margin-right: -1.15rem;
+            }
+        }
     }
