--- a/trillo.com/sass/_layout.scss
+++ b/trillo.com/sass/_layout.scss
@@ -58,6 +58,12 @@
 }
 
 .user-reviews {
-   background-color: yellowgreen; 
    flex: 1;
+
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+
+
+
 }
