added media queries for responsive design

--- a/trillo.com/sass/_components.scss
+++ b/trillo.com/sass/_components.scss
@@ -125,11 +125,25 @@
         list-style: none;
         margin-top: 3.6rem;
 
+        @media only screen and (max-width: $bp-medium) {
+            display: flex;
+            margin: 0;
+        }
+   
+
         &__item {
             position: relative;
 
             &:not(:last-child) {
                 margin-bottom: .5rem;
+
+                @media only screen and (max-width: $bp-medium) {
+                    margin: 0;
+                }
+            }
+
+            @media only screen and (max-width: $bp-medium) {
+                flex: 1;
             }
         }
 
@@ -167,6 +181,11 @@
 
             display: flex;
             align-items: center;
+
+            @media only screen and (max-width: $bp-medium) {
+                justify-content: center;
+                padding: 2rem;
+            }
         }
 
         &__link {
@@ -190,6 +209,10 @@
         color: var(--color-grey-light-4);
         text-align: center;
         padding: 2.5rem;
+
+        @media only screen and (max-width: $bp-medium) {
+           display: none;
+        }
 
     }
 
@@ -379,7 +402,7 @@
         }
 
         &__friends {
-
+            display: flex;
         }
 
         &__photo {
@@ -390,7 +413,7 @@
             border: 3px solid #fff;
 
             &:not(:last-child) {
-                margin-right: -1.15rem;
+                margin-right: -2rem;
             }
         }
     }
@@ -405,6 +428,12 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+       
+    }
 
 
    &__text {
@@ -467,6 +496,11 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+       
+    }
 
     &__book-now {
         font-size: 2rem;
