--- a/trillo.com/sass/_base.scss
+++ b/trillo.com/sass/_base.scss
@@ -21,6 +21,10 @@
 
 }
 
+/// RESPONSIVE BREAKE POINTS 
+$bp-largest: 75em;    //1200px/16
+$bp-large: 68.75em;   //1100px/16
+$bp-medium: 56.25em;   //900px/16
 
 * {
     margin: 0;
@@ -36,6 +40,10 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%; //1rem = 10px, 10px/16 = 62.5%
+
+    @media only screen and (max-width: $bp-largest) {
+        font-size: 50%;
+    }
 }
 body {
     background-color: #eb2f64;
