added more media queries

--- a/trillo.com/sass/_layout.scss
+++ b/trillo.com/sass/_layout.scss
@@ -10,8 +10,6 @@
         margin: 0;
         max-width: 100%;
     }
-        
-    
 }
 
 .header {
@@ -62,6 +60,9 @@
         padding: 3rem;
     }
 
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+    }
 }
 
 .description {
@@ -77,6 +78,11 @@
         margin-right: 3rem;
     }
 
+    @media only screen and (max-width: $bp-small) {
+        margin-right: 0rem;
+        margin-bottom: 3rem;
+
+      }
 }
 
 .user-reviews {
