--- a/trillo.com/sass/_base.scss
+++ b/trillo.com/sass/_base.scss
@@ -24,7 +24,8 @@
 /// RESPONSIVE BREAKE POINTS 
 $bp-largest: 75em;    //1200px/16
 $bp-large: 68.75em;   //1100px/16
-$bp-medium: 56.25em;   //900px/16
+$bp-medium: 56.25em;  //900px/16
+$bp-small: 37.5em;    //600px/16
 
 * {
     margin: 0;
