--- a/trillo.com/sass/_components.scss
+++ b/trillo.com/sass/_components.scss
@@ -186,18 +186,32 @@
                 justify-content: center;
                 padding: 2rem;
             }
+
+            @media only screen and (max-width: $bp-small) {
+                flex-direction: column;
+                padding: 1.5rem .5rem; 
+        
+              }
+
+            
         }
 
-        &__link {
+        // &__link {
 
 
-        }
+        // }
 
         &__icon {
             width: 1.75rem;
             height: 1.75rem;
             margin-right: 2rem;
             fill:currentColor;
+
+            @media only screen and (max-width: $bp-small) {
+                margin: 0 0 .7rem 0;
+                width: 1.5rem;
+                height: 1.5rem
+              }
         }
 
     }
