--- a/trillo.com/css/style.comp.css
+++ b/trillo.com/css/style.comp.css
@@ -53,7 +53,7 @@ body {
 .header {
   font-size: 1.4rem;
   height: 7rem;
-  background-color: red;
+  background-color: #fff;
   border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
