--- a/trillo.com/sass/_components.scss
+++ b/trillo.com/sass/_components.scss
@@ -4,7 +4,8 @@
     height: 3.25rem;
     margin-left: 2rem;
 }
-    //////////////////////////////
+
+//////////////////////////////
 //////////////////////////////
 //SEARCH
 .search {
@@ -12,6 +13,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--color-grey-light-2);
+
+
+    @media only screen and (max-width: $bp-smallest) {
+        order: 1;
+        flex: 0 0 100%;
+    }
 
     &__input {
         font-family: inherit;
@@ -256,6 +264,12 @@
             letter-spacing: 1px;
             padding: 1.5rem 3rem;
 
+            @media only screen and (max-width: $bp-small) {
+                font-size: 1.8rem;
+                padding: 1.25rem 2rem;
+            }
+        
+
         }
         &__stars {
             margin-right: auto;
@@ -290,6 +304,11 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+
+            @media only screen and (max-width: $bp-small) {
+                padding: 0 1.5rem;
+            }
+        
            
            
         }
@@ -298,12 +317,20 @@
             font-size: 2.25rem;
             font-weight: 300;
             margin-bottom: -3px;
+
+            @media only screen and (max-width: $bp-small) {
+                font-size: 1.8rem;
+            }
+        
         }
 
         &__rating-count {
             font-size: .8rem;
             text-transform: uppercase;
-           
+
+            @media only screen and (max-width: $bp-small) {
+                font-size: .5rem;
+            } 
 
         }
 
