added support browser queries

--- a/trillo.com/sass/_components.scss
+++ b/trillo.com/sass/_components.scss
@@ -269,7 +269,6 @@
                 padding: 1.25rem 2rem;
             }
         
-
         }
         &__stars {
             margin-right: auto;
@@ -309,8 +308,6 @@
                 padding: 0 1.5rem;
             }
         
-           
-           
         }
 
         &__rating-average {
@@ -416,15 +413,19 @@
             height: 1rem;
 
             //Oder Browsers
-            // background-image: url(../img/chevron-thin-right.svg);
-            // background-size: cover;
+             background-image: url(../img/chevron-thin-right.svg);
+             background-size: cover;
 
             //Newer browser -mask
-            background-color: var(--color-primary);
-            -webkit-mask-image: url(../img/chevron-thin-right.svg);
-            -webkit-mask-size: cover;
-            mask-image: url(../img/chevron-thin-right.svg);
-            mask-size: cover;
+            @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+                background-color: var(--color-primary);
+                -webkit-mask-image: url(../img/chevron-thin-right.svg);
+                -webkit-mask-size: cover;
+                mask-image: url(../img/chevron-thin-right.svg);
+                mask-size: cover;
+                background: none;
+            }
+           
         }
     }
 
