--- a/nexter.com/sass/_homes.scss
+++ b/nexter.com/sass/_homes.scss
@@ -1,4 +1,58 @@
 .homes {
-    background-color: $color-secondary;
     grid-column: center-start / center-end;
+    margin: 15rem 0;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 7rem;
+}
+
+.home {
+    background-color: $color-grey-light-1;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    &__img {
+        width: 100%;
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        z-index: 1;
+    }
+
+    &__like {
+        grid-row: 1 / 2;
+        grid-column: 2 / 3;
+        fill: $color-primary;
+        height: 2.5rem;
+        width: 2.5rem;
+        z-index: 2;
+        justify-self: end;
+        margin: 1rem;
+
+    }
+
+    &__name {
+        grid-column: 1 / -1;
+    }
+
+    &__location,
+    &__rooms,
+    &__area,
+    &__price {
+
+        svg {
+            fill: $color-primary;
+            height: 2rem;
+            width: 2rem;
+        }
+
+        p {
+
+        }
+    }
+
+    &__btn {
+        grid-column: 1 / -1;
+    }
 }
