--- a/nexter.com/sass/_typography.scss
+++ b/nexter.com/sass/_typography.scss
@@ -39,7 +39,7 @@
     background-color: $color-primary;
     color: #fff;
     border: none;
-    border-radius: 1rem;
+    border-radius: 0;
     font-family: $font-display;
     font-size: 1.5rem;
     text-transform: uppercase;
