--- a/nexter.com/sass/_story.scss
+++ b/nexter.com/sass/_story.scss
@@ -4,13 +4,17 @@
         grid-column:  full-start / col-end 4;
         background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)),  
         url(../img/back.jpg);
+        background-size: cover;
 
         display: grid;
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(6, 1fr);
         align-items: center;
 
-
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / -1; 
+            padding: 6rem;
+        }
     }
 
     &__img--1 {
@@ -19,6 +23,10 @@
         grid-column: 2 / 6;
         box-shadow: 0 2rem 5rem rgba(#000, .1);
 
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / 5; 
+            grid-row: 1 / -1;
+        }
     }
 
     &__img--2 {
@@ -27,6 +35,11 @@
         grid-column: 4 / 7;
         z-index: 20;
         box-shadow: 0 2rem 5rem rgba(#000, .2);
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-row: 1 / -1;
+            width: 100%;
+        }
     }
 
     &__content {
@@ -43,6 +56,12 @@
         display: grid;
         align-content: center;
         justify-items: start;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / -1; 
+            grid-row: 5 / 6;
+    
+        }
         
     }
 
