--- a/natours.com/sass/layout/_header.scss
+++ b/natours.com/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
     height: 85vh;
-    background-image: linear-gradient( to right top, rgba($color-black, .3), rgba($color-black, .3)), url(../img/canyon-1-small.jpg);
+    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../img/canyon-1-small.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
@@ -15,7 +15,7 @@
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
     only screen and (min-width: 125em) {
-        background-image: linear-gradient( to right top, rgba($color-black, .3), rgba($color-black, .3)), url(../img/canyon-1.jpg);
+        background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),url(../img/canyon-1.jpg);
     }
 
     @include respond(phone) {
