--- a/loso.com/sass/layout/_contact.scss
+++ b/loso.com/sass/layout/_contact.scss
@@ -1,3 +1,10 @@
+// .contact-us { 
+//     background-image: linear-gradient(rgba($color-white, 0.75), rgba($color-white, 0.75)), url("/img/counter-bg.jpg");
+//     background-attachment: fixed;
+//     background-size: cover;
+
+// }
+
 .contact-title_text {
     @include sectionText;
     margin-bottom: 100px;
