--- a/loso.com/css/style.css
+++ b/loso.com/css/style.css
@@ -138,8 +138,14 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  font-size: 48px;
+  font-size: 25px;
   color: #129cf3;
+  border: solid 1px #cccccc;
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  border-radius: 50px;
   transition: all 1s; }
 
 .contact-title_text {
@@ -342,21 +348,31 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  font-size: 30px;
+  font-size: 25px;
   color: #129cf3;
   width: 90px;
   height: 90px;
-  text-align: center; }
+  border: solid 1px #cccccc;
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  border-radius: 50px; }
 
 .left-features_icon {
   position: absolute;
   right: 0;
   top: 0;
-  font-size: 30px;
+  font-size: 25px;
   color: #129cf3;
   width: 90px;
   height: 90px;
-  text-align: center; }
+  border: solid 1px #cccccc;
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  border-radius: 50px; }
 
 .footer {
   background-color: #1a1a1a;
