--- a/loso.com/sass/layout/_about.scss
+++ b/loso.com/sass/layout/_about.scss
@@ -43,7 +43,13 @@
     position: absolute;
     top: 0;
     left: 0;
-    font-size: 48px;
+    font-size: 25px;
     color: $color-primary;
+    border: solid 1px #cccccc;
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
+    text-align: center;
+    border-radius: 50px;
     transition: all 1s;
 }
