--- a/loso.com/sass/layout/_features.scss
+++ b/loso.com/sass/layout/_features.scss
@@ -33,11 +33,16 @@
     position: absolute;
     left: 0;
     top: 0;
-    font-size: 30px;
+    font-size: 25px;
     color: $color-primary;
     width: 90px;
     height: 90px;
+    border: solid 1px #cccccc;
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
     text-align: center;
+    border-radius: 50px;
 
 }
 
@@ -45,11 +50,15 @@
     position: absolute;
     right: 0;
     top: 0;
-    font-size: 30px;
+    font-size: 25px;
     color: $color-primary;
     width: 90px;
     height: 90px;
+    border: solid 1px #cccccc;
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
     text-align: center;
-}
+    border-radius: 50px;}
 
 
