--- a/loso.com/css/responsive.css
+++ b/loso.com/css/responsive.css
@@ -8,6 +8,15 @@
 @media only screen and (max-width: 767px) {
     .header {
         height: 100vh; 
+        /* background-image: linear-gradient(rgba(#129cf3, 0.90), rgba(#129cf3 0.90)), url("/img/header-bg-mobile.jpg"); */
+        background-image: url("/img/header-bg-mobile.jpg");
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        -webkit-background-size: cover;
+    
     }
 
     .header-text {
