--- a/natours.com/sass/layout/_navigation.scss
+++ b/natours.com/sass/layout/_navigation.scss
@@ -70,7 +70,7 @@
         list-style: none;
         text-align: center;
         width: 100%;
-        display: none;
+        // display: none;
     }
 
     &__item {
