--- a/natours.com/sass/layout/_header.scss
+++ b/natours.com/sass/layout/_header.scss
@@ -1,8 +1,8 @@
 .header {
     height: 85vh;
-    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../img/bg4.jpeg);
+    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),url(../../img/canyon.jpg);
     background-size: cover;
-    background-position: top;
+    background-position: center center;
     position: relative;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -11,11 +11,11 @@
         clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
         height: 95vh;
     }
-
+    
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
     only screen and (min-width: 125em) {
-        background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),url(../img/canyon-1.jpg);
+        background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),url(../img/canyon-1-small.jpg);
     }
 
     @include respond(phone) {
