added logo and navigation menu

--- a/omnifood.com/sass/layout/_header.scss
+++ b/omnifood.com/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/omnifood.com/images/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -11,4 +11,44 @@
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
+    &__logo {
+        height: 100px;
+        margin-top: 20px;
+        float: left;
+        width: auto;
+
+    }
+
+}
+
+.main__nav {
+    &-list {
+        float: right;
+        list-style: none;
+        margin-top: 60px;
+    
+    }
+
+    &-item {
+        display: inline-block;
+        margin-left: 40px;
+    }
+    
+    &-link:link,
+    &-link:visited {
+        color: #fff;
+        border-bottom: 2px solid transparent;
+        font-size: 90%;
+        padding: 5px 0;
+        text-decoration: none;
+        text-transform: uppercase;
+        transition: all 0.2s;
+    }
+
+    &-link:hover,
+    &-link:active {
+        border-bottom: 2px solid $color-primary;
+    } 
+
 }
