--- a/omnifood.com/css/style.css
+++ b/omnifood.com/css/style.css
@@ -1,5 +1,5 @@
 .header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/omnifood.com/images/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh; }
@@ -9,6 +9,32 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
+  .header__logo {
+    height: 100px;
+    margin-top: 20px;
+    float: left;
+    width: auto; }
+
+.main__nav-list {
+  float: right;
+  list-style: none;
+  margin-top: 60px; }
+
+.main__nav-item {
+  display: inline-block;
+  margin-left: 40px; }
+
+.main__nav-link:link, .main__nav-link:visited {
+  color: #fff;
+  border-bottom: 2px solid transparent;
+  font-size: 90%;
+  padding: 5px 0;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.2s; }
+
+.main__nav-link:hover, .main__nav-link:active {
+  border-bottom: 2px solid #e67e22; }
 
 * {
   margin: 0;
