--- a/omnifood.com/sass/layout/_header.scss
+++ b/omnifood.com/sass/layout/_header.scss
@@ -37,7 +37,7 @@
     
     &-link:link,
     &-link:visited {
-        color: #fff;
+        color: $color-white;
         border-bottom: 2px solid transparent;
         font-size: 90%;
         padding: 5px 0;
