--- a/omnifood.com/sass/main.scss
+++ b/omnifood.com/sass/main.scss
@@ -1,8 +1,12 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
 @import "layout/header";
+@import "layout/grid";
 
 @import "base/base";
 @import "base/typography";
+
+@import "pages/sections"
 
  
 
