--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -5,14 +5,21 @@
         color: $color-primary;
         display: block;
         --ionicon-stroke-width: 12px;
+        margin-bottom: 10px;
         font-size: 350%;
     }
 
-    &--text {
+    &--heading-text {
         line-height: 145%;
         width: 70%;
         margin-left: 15%;
+        margin-bottom: 30px;
         
+    }
+
+    &--text {
+        font-size: 90%;
+        line-height: 145%;
     }
 }
 
