--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -1,5 +1,6 @@
 .section__features {
     padding: 80px 0;
+    margin-bottom: 35px;
 
     &--icon {
         color: $color-primary;
@@ -13,7 +14,7 @@
         line-height: 145%;
         width: 70%;
         margin-left: 15%;
-        margin-bottom: 30px;
+        margin-bottom: 35px;
         
     }
 
@@ -28,6 +29,8 @@
 }
 
 .section__meals {
+    padding: 0;
+
     &--showcase {
         list-style: none;
         width: 100%;
@@ -41,10 +44,23 @@
         &-foto {
             width: 100%;
             margin: 0;
+            overflow: hidden;
+            background-color: #000;
+
+            & img {
+                width: 100%;
+                height: auto;
+                transform: scale(1.15);
+                opacity: 0.7;
+                transition: all 0.5s;
+            }
+
+            & img:hover {
+                transform: scale(1.1);
+                opacity: 1;
+            }
         }
-        &-foto img {
-            width: 100%;
-            height: auto;
-        }
+       
+
     }
 }
