--- a/omnifood.com/sass/base/_base.scss
+++ b/omnifood.com/sass/base/_base.scss
@@ -15,6 +15,15 @@ html {
 
 }
 
+.clearfix {zoom: 1};
+.clearfix:after {
+    content: '';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
 .row {
     max-width: 1140px;
     margin: 0 auto;
