--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -1,6 +1,6 @@
 .section__features {
-    padding: 65px 0;
-    margin-bottom: 35px;
+    padding: 80px 0;
+    margin-bottom: 25px;
 
     &--icon {
         color: $color-primary;
@@ -117,4 +117,49 @@
     margin-left: 10px;
     width: auto;
     border-radius: 10px;
+}
+
+.section__cities {
+    padding: 80px 0;
+}
+
+.city__features {
+    margin-bottom: 5px;
+
+    &--img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 15px;
+    }
+
+    &--logo {
+        display: inline-block;
+        color: $color-primary;
+        margin-right: 10px;
+        text-align: center;
+        line-height: 120%;
+        width: 30px;
+        margin-top: -5px;
+        
+    }
+
+    &--link {
+        color: $color-primary;
+        text-decoration: none;
+        padding-bottom: 1px;
+        border-bottom: 1px solid $color-primary;
+        transition: all 0.2s;
+
+        &:link,
+        :visited {
+        color: $color-primary;
+        }
+
+        &:hover,
+        :active {
+            color: #555;
+            border-bottom: none;
+        }
+    }
+    
 }
