added testimonials section

--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -1,6 +1,6 @@
 .section__features {
     padding: 80px 0;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 
     &--icon {
         color: $color-primary;
@@ -162,4 +162,45 @@
         }
     }
     
+}
+
+.section__testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../images/back-customers.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: $color-white;
+    padding: 80px 0;
+    height: 80vh;
+
+    &--img {
+        height: 45px;
+        border-radius: 50%;
+        margin-right: 10px;
+        vertical-align: middle;
+    }
+}
+
+.cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+.blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+
+    &::before {
+        content: "\201c";
+        font-size: 500%;
+        display: block;
+        position: absolute;
+        top: -5px;
+        left: -5px;
+    }
+
 }
