--- a/omnifood.com/css/style.css
+++ b/omnifood.com/css/style.css
@@ -2,6 +2,7 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero.jpg);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   height: 100vh; }
   .header__text-box {
     position: absolute;
@@ -596,7 +597,7 @@ html {
 
 .section__features {
   padding: 80px 0;
-  margin-bottom: 25px; }
+  margin-bottom: 20px; }
   .section__features--icon {
     color: #e67e22;
     display: block;
@@ -706,3 +707,36 @@ html {
     .city__features--link :active {
       color: #555;
       border-bottom: none; }
+
+.section__testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../images/back-customers.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: #fff;
+  padding: 80px 0;
+  height: 80vh; }
+  .section__testimonials--img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle; }
+
+.cite {
+  font-size: 90%;
+  margin-top: 25px;
+  display: block; }
+
+.blockquote {
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+  position: relative;
+  margin-top: 40px; }
+  .blockquote::before {
+    content: "\201c";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -5px; }
