added form section

--- a/omnifood.com/sass/base/_base.scss
+++ b/omnifood.com/sass/base/_base.scss
@@ -31,7 +31,8 @@ html {
 
 
 .btn:link, 
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     border-radius: 200px;
     font-weight: 300;
@@ -50,14 +51,16 @@ html {
 } 
 
 .btn-full:link, 
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: $color-primary;
     border: 1px solid $color-primary;
     color: $color-white;
     margin-right: 15px;
 
     &:hover,
-    &:active {
+    &:active,
+    input[type=submit] {
         border: 1px solid $color-primary-dark;
 
     }
