--- a/omnifood.com/css/style.css
+++ b/omnifood.com/css/style.css
@@ -529,7 +529,8 @@ html {
   margin: 0 auto; }
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
   display: inline-block;
   border-radius: 200px;
   font-weight: 300;
@@ -539,18 +540,26 @@ html {
   transition: all .2s; }
   .btn:link:hover, .btn:link:active,
   .btn:visited:hover,
-  .btn:visited:active {
+  .btn:visited:active,
+  input[type=submit]:hover,
+  input[type=submit]:active {
     background-color: #cf6d17; }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
   background-color: #e67e22;
   border: 1px solid #e67e22;
   color: #fff;
   margin-right: 15px; }
   .btn-full:link:hover, .btn-full:link:active,
+  .btn-full:link input[type=submit],
   .btn-full:visited:hover,
-  .btn-full:visited:active {
+  .btn-full:visited:active,
+  .btn-full:visited input[type=submit],
+  input[type=submit]:hover,
+  input[type=submit]:active,
+  input[type=submit] input[type=submit] {
     border: 1px solid #cf6d17; }
 
 .btn-ghost:link,
@@ -742,7 +751,8 @@ html {
     left: -5px; }
 
 .section__plans {
-  background-color: #f4f4f4; }
+  background-color: #f4f4f4;
+  padding: 80px 0; }
 
 .plan__box {
   background-color: #fff;
@@ -780,3 +790,32 @@ html {
     padding: 5px 0; }
     .plan__box-list li {
       padding: 5px 0; }
+
+.section__form {
+  padding: 80px 0; }
+
+.primium {
+  background-color: #fcfcfcb0; }
+
+.contact__form {
+  margin: 0 auto;
+  width: 60%; }
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  font-size: medium; }
+
+textarea {
+  height: 100px; }
+
+input[type=checkbox] {
+  margin: 10px 5px 10px 0; }
+
+*:focus {
+  outline: none; }
